# CV

./: HOWTO.md  README.md  style.css
graphs/: pyproject.toml
graphs/graphs/: marimo_notebook.py
