[tool.poetry]
name = "graphs"
version = "0.1.0"
description = ""
authors = ["Bogdan Neterebskii <bog2dan1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.24.1"
ipykernel = "^6.29.5"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
xkcd = "^2.4.2"
marimo = "^0.10.7"
pandas = "^2.2.3"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
